--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity" >
+    android:padding="25dp"
+    tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/textView"
@@ -16,7 +17,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
     <EditText
-        android:id="@+id/et_email"
+        android:id="@+id/et_mail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -40,4 +41,23 @@
         android:inputType="textPassword"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+
+    <LinearLayout
+        android:layout_width="362dp"
+        android:layout_height="35dp"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:id="@+id/bt_register"
+            android:layout_width="176dp"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_register" />
+
+        <ImageButton
+            android:id="@+id/bt_login"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_login" />
+    </LinearLayout>
+
 </LinearLayout>
