--- a/app/src/main/res/layout/fragment_lugar.xml
+++ b/app/src/main/res/layout/fragment_lugar.xml
@@ -6,17 +6,23 @@
     android:layout_height="match_parent"
     tools:context=".ui.lugar.LugarFragment">
 
-    <TextView
-        android:id="@+id/text_home"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/reciclador"
+        android:layout_width="410dp"
+        android:layout_height="729dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fb_agregar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        android:src="@drawable/ic_add_lugar"
+        app:layout_constraintBottom_toBottomOf="@+id/reciclador"
+        app:layout_constraintEnd_toEndOf="@+id/reciclador" />
 </androidx.constraintlayout.widget.ConstraintLayout>
